# AETHELGARD

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  api.py  benchmarks.md  fly.toml  main.py  pyproject.toml  quickstart.py  render.yaml  requirements-dev.txt  requirements-ml.txt  requirements.txt  trigger.py
agents/: __init__.py  base_agent.py  deployment_agent.py  detection_agent.py  diagnosis_agent.py  orchestrator.py  remediation_agent.py  validation_agent.py
application/: agent_coordinator.py  workflow_engine.py
core/: __init__.py  config.py  exceptions.py  logging_config.py  models.py  preflight.py  telemetry.py
dashboard/: streamlit_app.py
deployment/: __init__.py
docs/: CI_CD_SETUP.md  DEPLOYMENT_GUIDE.md  OPERATIONS_RUNBOOK.md  PRODUCTION_VALIDATION_REPORT.md  SECURITY_MODEL.md  SYSTEM_ARCHITECTURE.md  agents.md  architecture.md  benchmarks.md  infrastructure.md  observability_runbook.md
domain/: anomaly.py  job.py  remediation.py  state_machine.py
event_bus/: __init__.py  redis_streams.py
experiments/: db_overload.sh  memory_leak.sh  payment_service.py  slow_api.sh
frontend/: DESIGN_SYSTEM.md  DEVELOPMENT_CHECKLIST.md  FRONTEND_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
infra/: Dockerfile  Dockerfile.sandbox  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
infrastructure/: distributed_lock.py  persistence.py  postgres_store.py  redis_client.py
knowledge/: __init__.py  rag_engine.py
ui/: fly.toml  (+7 more)
(+95 files in other folders)
